# cmd_vel_pattern_runner

kaitenyaki/: package.xml  setup.cfg  setup.py
kaitenyaki/kaitenyaki/: hatinozi_odm.py  odm_cpp.py  odm_cpp_8.py  pnd_odm.py  sikaku_odm.py  yoppy_sikaku_odm.py
kaitenyaki_cpp/: CMakeLists.txt  package.xml
kaitenyaki_cpp/src/: odm.cpp  odm_py.cpp
taiyaki/: package.xml  setup.cfg  setup.py
taiyaki/taiyaki/: hachinozi.py
takoyaki/: package.xml  setup.cfg  setup.py
takoyaki/takoyaki/: sikaku.py
